Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
         if (contact) {
           // Сразу переходим на auth.html после успешного получения контакта
           window.location.href = 'auth.html';
-        } else {
-          alert('Запрос контакта отменен');
-        }
+        } else 
       });
     }
     
@@ -175,3 +173,4 @@
   </script>
 </body>
 </html>
+
